[project]
name = "002_FluentPython"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Isaias Gutierrez Cruz", email = "isaiascruz@comunidad.unam.mx"},
]
dependencies = [
    "marimo>=0.6.13",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.2.1",
    "nbval>=0.11.0",
]
